--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -186,8 +186,8 @@
   "EditListingDescriptionPanel.title": "Edit details of {listingTitle}",
   "EditListingFeaturesForm.showListingFailed": "Fetching listing data failed",
   "EditListingFeaturesForm.updateFailed": "Failed to update listing. Please try again.",
-  "EditListingFeaturesPanel.createListingTitle": "What amenities does your sauna have?",
-  "EditListingFeaturesPanel.title": "Edit the amenities of {listingTitle}",
+  "EditListingFeaturesPanel.createListingTitle": "What features does your sauna have?",
+  "EditListingFeaturesPanel.title": "Edit the features of {listingTitle}",
   "EditListingLocationForm.address": "Address",
   "EditListingLocationForm.addressNotRecognized": "We didn't recognize this location. Please try another location.",
   "EditListingLocationForm.addressPlaceholder": "123 Example Street",
@@ -386,6 +386,7 @@
   "ListingPage.schemaTitle": "{title} - {price} | {siteTitle}",
   "ListingPage.viewImagesButton": "View photos ({count})",
   "ListingPage.yourHostHeading": "Your host",
+  "ListingPage.viewType": "Cottage with {view}",
   "LoadableComponentErrorBoundaryPage.title": "Page not fetched",
   "LoadableComponentErrorBoundaryPage.heading": "Oops, we couldn't fetch the page.",
   "LoadableComponentErrorBoundaryPage.description": "It looks like the app needs to be updated! Please, refresh the current page or go back to {link}.",
